CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (PostLattice)

SET (CMAKE_CXX_STANDARD 17)

FIND_PACKAGE (OpenMP)
IF (OPENMP_FOUND)
    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    SET (CMAKE_EXE_LINKER_FLAGS 
        "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF ()

INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/External/inih/cpp)
ADD_SUBDIRECTORY (${PROJECT_SOURCE_DIR}/External/inih)
ADD_SUBDIRECTORY (${PROJECT_SOURCE_DIR}/Source)
ADD_DEPENDENCIES (Post inih)

ADD_CUSTOM_TARGET (link ALL COMMAND ${CMAKE_COMMAND} -E
        create_symlink ${CMAKE_BINARY_DIR}/Source/Post ${PROJECT_SOURCE_DIR}/Source/Post)
