CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (PostLattice)

SET (CMAKE_CXX_STANDARD 11)

INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/External/inih/cpp)
ADD_SUBDIRECTORY (${PROJECT_SOURCE_DIR}/External/inih)
ADD_SUBDIRECTORY (${PROJECT_SOURCE_DIR}/Source)
ADD_DEPENDENCIES (Post inih)

ADD_CUSTOM_TARGET (link ALL COMMAND ${CMAKE_COMMAND} -E
        create_symlink ${CMAKE_BINARY_DIR}/Source/Post ${PROJECT_SOURCE_DIR}/Source/Post)
